# pdf-slicer

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
src/pdf_cutter/: __init__.py  gui.py  splitter.py
src/pdf_slicer/: __init__.py  splitter.py
src/pdf_slicer/gui/: __init__.py  __main__.py  window.py
tests/: test_cli.py  test_package.py
