[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pdf_slicer"
authors = [
  { name = "René Fritze", email = "github@fritze.me" },
]
description = "GUI for easy PDF slicing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "typing_extensions >=3.9; python_version<'3.8'",
  "pyside6",
  "PyMuPDF==1.21.1",
  "typer",
  "qtpy",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-regressions >=2",
  "pytest-qt >=4",
  "diff-pdf-visually==1.7.0",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "Sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
]

[project.gui-scripts]
pdf-slicer-gui = "pdf_slicer.gui:main"

[project.scripts]
pdf-slicer = "pdf_slicer.splitter:main"

[project.urls]
Homepage = "https://github.com/renefritze/pdf-slicer"
"Bug Tracker" = "https://github.com/renefritze/pdf-slicer/issues"
Changelog = "https://github.com/renefritze/pdf-slicer/releases"
[tool.hatch]
version.path = "src/pdf_slicer/__init__.py"
envs.default.dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.9"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.isort]
profile = "black"


[tool.pylint]
py-version = "3.9"
ignore-paths= ["src/pdf_slicer/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
